--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "node-sass": "^4.13.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "plotly.js": "^1.51.1",
+    "react-plotly.js": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
